Fixing Code Duplication Accommodation Service (#47)
* Fixing code duplication in accommodation service

* Fixed validateAmenitiesExist method and tests

* Added changes according the review

* Added changes according the review 3

---------

Co-authored-by: Hanna Ratushniak <ratushnyakhanna@gmail.com>